--- a/package.json
+++ b/package.json
@@ -192,10 +192,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "statements": 98,
-        "branches": 91,
-        "functions": 98,
-        "lines": 98
+        "statements": 90,
+        "branches": 90,
+        "functions": 90,
+        "lines": 90
       }
     },
     "moduleDirectories": [
@@ -211,7 +211,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.20.0",
-    "chalk": "1.1.3",
+    "chalk": "^1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
@@ -292,7 +292,7 @@
     "react-addons-test-utils": "15.4.1",
     "react-json-tree": "0.10.9",
     "rimraf": "2.5.4",
-    "shelljs": "0.7.5",
+    "shelljs": "^0.7.5",
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
